develop training. plugin might only can be used in sim; not on learn

--- a/python/reference_nb/scratch_paper.ipynb
+++ b/python/reference_nb/scratch_paper.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -163,22 +163,19 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "SX(@1=1, @2=-0.25, @3=0.25, @4=((((@2*u_mix_0)+(@3*u_mix_1))+(@3*u_mix_2))+(@3*u_mix_3)), @5=(@1<@4), @6=0, @7=((((@3*u_mix_0)+(@2*u_mix_1))+(@3*u_mix_2))+(@3*u_mix_3)), @8=(@1<@7), @9=((((@3*u_mix_0)+(@3*u_mix_1))+(@2*u_mix_2))+(@3*u_mix_3)), @10=(@1<@9), @11=((((@2*u_mix_0)+(@2*u_mix_1))+(@2*u_mix_2))+(@3*u_mix_3)), @12=(@1<@11), [((@5?@1:0)+((!@5)?((!(@4<@6))?@4:0):0)), ((@8?@1:0)+((!@8)?((!(@7<@6))?@7:0):0)), ((@10?@1:0)+((!@10)?((!(@9<@6))?@9:0):0)), ((@12?@1:0)+((!@12)?((!(@11<@6))?@11:0):0))])"
+       "DM([0, 0, 0, 1])"
       ]
      },
-     "execution_count": 9,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
+     "metadata": {},
+     "execution_count": 39
     }
    ],
    "source": [
-    "u_mix = ca.SX.sym('u_mix', 4)\n",
+    "u_mix = [-2,0,-2,0]\n",
     "u_motor = saturate(mix2motor(u_mix), 4)                           # convert u_mix(angle input) to motor duty\n",
-    "\n",
     "u_motor"
    ]
   },
@@ -522,6 +519,35 @@
    ],
    "source": [
     "a[0,:4].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scratch_script as pp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "pp.A"
    ]
   },
   {
