--- a/python/test_system/quadrotor/train.ipynb
+++ b/python/test_system/quadrotor/train.ipynb
@@ -74,19 +74,19 @@
     "import matplotlib.animation as animation\n",
     "import quadrotor_A2C_traj as train_model\n",
     "import numpy as np\n",
-    "\n",
+    "import params as par\n",
     "\n",
     "# In[2]\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    arrive_time = 30\n",
-    "    hover_time = 2\n",
+    "    arrive_time = par.arrive_time\n",
+    "    hover_time = par.hover_time\n",
     "    quadrotor_env = train_model.Environment()\n",
     "    data, distance = quadrotor_env.run(arrive_time, hover_time)\n",
-    "    np.save('./test_system/quadrotor/trained_net/flight_data.npy', data)\n",
-    "    np.save('./test_system/quadrotor/trained_net/distance_data.npy', distance)\n",
+    "    np.save('./python/test_system/quadrotor/trained_net/flight_data.npy', data)\n",
+    "    np.save('./python/test_system/quadrotor/trained_net/distance_data.npy', distance)\n",
     "    \n",
-    "    t = np.arange(0,arrive_time + hover_time,0.01)\n",
+    "    t = np.arange(0,arrive_time + hover_time,par.DELTA_T)\n",
     "\n",
     "    def update_lines(num, data, line):\n",
     "        # NOTE: there is no .set_data() for 3 dim data...\n",
@@ -169,7 +169,7 @@
     "\n",
     "    fig2.savefig('./test_system/quadrotor/trained_net/flight_data.png')\n",
     "    \n",
-    "    plt.show()"
+    "    plt.show()t.show()"
    ]
   },
   {
