easier analysis. working on traj nlp optimize

--- a/python/reference_nb/scratch_paper.ipynb
+++ b/python/reference_nb/scratch_paper.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -69,7 +69,8 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import json"
    ]
   },
   {
@@ -523,31 +524,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scratch_script as pp"
+    "a = np.zeros([3,32,100,12])\n",
+    "b = np.zeros([32,100,12])\n",
+    "c = np.zeros([32,100])\n",
+    "e = np.zeros([32,100,4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (32,100,4) into shape (32,100,12)",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-1b6cc0bab3ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# a[1] = c\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (32,100,4) into shape (32,100,12)"
+     ]
+    }
+   ],
+   "source": [
+    "a[0] = b\n",
+    "# a[1] = c\n",
+    "a[2] = e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "10"
+       "array([  3,  32, 100,  12])"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 11
     }
    ],
    "source": [
-    "pp.A"
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = {\n",
+    "    'a': np.array([1,2,3,4]),\n",
+    "    'b': np.array([[1,2,3],[4,5,6]]),\n",
+    "    'c': 4\n",
+    "}\n",
+    "np.save('flight_data.npy', dic)\n",
+    "# json.dump(dic, open('../flight_data.json', 'w'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "data = np.load('flight_data.npy',allow_pickle=True).item()\n",
+    "data['a'][:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "len(np.zeros(4))"
    ]
   },
   {
@@ -578,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
