--- a/python/reference_nb/scratch_paper.ipynb
+++ b/python/reference_nb/scratch_paper.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -70,7 +70,11 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
-    "import json"
+    "import json\n",
+    "import itertools\n",
+    "import sys\n",
+    "sys.path.insert(0,\"../test_system/quadrotor\")\n",
+    "import params as par"
    ]
   },
   {
@@ -631,6 +635,239 @@
    ],
    "source": [
     "len(np.zeros(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{0: array([-0.001, -0.001, -0.001, -0.01 ]),\n",
+       " 1: array([-0.001, -0.001, -0.001,  0.   ]),\n",
+       " 2: array([-0.001, -0.001, -0.001,  0.01 ]),\n",
+       " 3: array([-0.001, -0.001,  0.   , -0.01 ]),\n",
+       " 4: array([-0.001, -0.001,  0.   ,  0.   ]),\n",
+       " 5: array([-0.001, -0.001,  0.   ,  0.01 ]),\n",
+       " 6: array([-0.001, -0.001,  0.001, -0.01 ]),\n",
+       " 7: array([-0.001, -0.001,  0.001,  0.   ]),\n",
+       " 8: array([-0.001, -0.001,  0.001,  0.01 ]),\n",
+       " 9: array([-0.001,  0.   , -0.001, -0.01 ]),\n",
+       " 10: array([-0.001,  0.   , -0.001,  0.   ]),\n",
+       " 11: array([-0.001,  0.   , -0.001,  0.01 ]),\n",
+       " 12: array([-0.001,  0.   ,  0.   , -0.01 ]),\n",
+       " 13: array([-0.001,  0.   ,  0.   ,  0.   ]),\n",
+       " 14: array([-0.001,  0.   ,  0.   ,  0.01 ]),\n",
+       " 15: array([-0.001,  0.   ,  0.001, -0.01 ]),\n",
+       " 16: array([-0.001,  0.   ,  0.001,  0.   ]),\n",
+       " 17: array([-0.001,  0.   ,  0.001,  0.01 ]),\n",
+       " 18: array([-0.001,  0.001, -0.001, -0.01 ]),\n",
+       " 19: array([-0.001,  0.001, -0.001,  0.   ]),\n",
+       " 20: array([-0.001,  0.001, -0.001,  0.01 ]),\n",
+       " 21: array([-0.001,  0.001,  0.   , -0.01 ]),\n",
+       " 22: array([-0.001,  0.001,  0.   ,  0.   ]),\n",
+       " 23: array([-0.001,  0.001,  0.   ,  0.01 ]),\n",
+       " 24: array([-0.001,  0.001,  0.001, -0.01 ]),\n",
+       " 25: array([-0.001,  0.001,  0.001,  0.   ]),\n",
+       " 26: array([-0.001,  0.001,  0.001,  0.01 ]),\n",
+       " 27: array([ 0.   , -0.001, -0.001, -0.01 ]),\n",
+       " 28: array([ 0.   , -0.001, -0.001,  0.   ]),\n",
+       " 29: array([ 0.   , -0.001, -0.001,  0.01 ]),\n",
+       " 30: array([ 0.   , -0.001,  0.   , -0.01 ]),\n",
+       " 31: array([ 0.   , -0.001,  0.   ,  0.   ]),\n",
+       " 32: array([ 0.   , -0.001,  0.   ,  0.01 ]),\n",
+       " 33: array([ 0.   , -0.001,  0.001, -0.01 ]),\n",
+       " 34: array([ 0.   , -0.001,  0.001,  0.   ]),\n",
+       " 35: array([ 0.   , -0.001,  0.001,  0.01 ]),\n",
+       " 36: array([ 0.   ,  0.   , -0.001, -0.01 ]),\n",
+       " 37: array([ 0.   ,  0.   , -0.001,  0.   ]),\n",
+       " 38: array([ 0.   ,  0.   , -0.001,  0.01 ]),\n",
+       " 39: array([ 0.  ,  0.  ,  0.  , -0.01]),\n",
+       " 40: array([0., 0., 0., 0.]),\n",
+       " 41: array([0.  , 0.  , 0.  , 0.01]),\n",
+       " 42: array([ 0.   ,  0.   ,  0.001, -0.01 ]),\n",
+       " 43: array([0.   , 0.   , 0.001, 0.   ]),\n",
+       " 44: array([0.   , 0.   , 0.001, 0.01 ]),\n",
+       " 45: array([ 0.   ,  0.001, -0.001, -0.01 ]),\n",
+       " 46: array([ 0.   ,  0.001, -0.001,  0.   ]),\n",
+       " 47: array([ 0.   ,  0.001, -0.001,  0.01 ]),\n",
+       " 48: array([ 0.   ,  0.001,  0.   , -0.01 ]),\n",
+       " 49: array([0.   , 0.001, 0.   , 0.   ]),\n",
+       " 50: array([0.   , 0.001, 0.   , 0.01 ]),\n",
+       " 51: array([ 0.   ,  0.001,  0.001, -0.01 ]),\n",
+       " 52: array([0.   , 0.001, 0.001, 0.   ]),\n",
+       " 53: array([0.   , 0.001, 0.001, 0.01 ]),\n",
+       " 54: array([ 0.001, -0.001, -0.001, -0.01 ]),\n",
+       " 55: array([ 0.001, -0.001, -0.001,  0.   ]),\n",
+       " 56: array([ 0.001, -0.001, -0.001,  0.01 ]),\n",
+       " 57: array([ 0.001, -0.001,  0.   , -0.01 ]),\n",
+       " 58: array([ 0.001, -0.001,  0.   ,  0.   ]),\n",
+       " 59: array([ 0.001, -0.001,  0.   ,  0.01 ]),\n",
+       " 60: array([ 0.001, -0.001,  0.001, -0.01 ]),\n",
+       " 61: array([ 0.001, -0.001,  0.001,  0.   ]),\n",
+       " 62: array([ 0.001, -0.001,  0.001,  0.01 ]),\n",
+       " 63: array([ 0.001,  0.   , -0.001, -0.01 ]),\n",
+       " 64: array([ 0.001,  0.   , -0.001,  0.   ]),\n",
+       " 65: array([ 0.001,  0.   , -0.001,  0.01 ]),\n",
+       " 66: array([ 0.001,  0.   ,  0.   , -0.01 ]),\n",
+       " 67: array([0.001, 0.   , 0.   , 0.   ]),\n",
+       " 68: array([0.001, 0.   , 0.   , 0.01 ]),\n",
+       " 69: array([ 0.001,  0.   ,  0.001, -0.01 ]),\n",
+       " 70: array([0.001, 0.   , 0.001, 0.   ]),\n",
+       " 71: array([0.001, 0.   , 0.001, 0.01 ]),\n",
+       " 72: array([ 0.001,  0.001, -0.001, -0.01 ]),\n",
+       " 73: array([ 0.001,  0.001, -0.001,  0.   ]),\n",
+       " 74: array([ 0.001,  0.001, -0.001,  0.01 ]),\n",
+       " 75: array([ 0.001,  0.001,  0.   , -0.01 ]),\n",
+       " 76: array([0.001, 0.001, 0.   , 0.   ]),\n",
+       " 77: array([0.001, 0.001, 0.   , 0.01 ]),\n",
+       " 78: array([ 0.001,  0.001,  0.001, -0.01 ]),\n",
+       " 79: array([0.001, 0.001, 0.001, 0.   ]),\n",
+       " 80: array([0.001, 0.001, 0.001, 0.01 ])}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 168
+    }
+   ],
+   "source": [
+    "action_roll = par.action_roll               # [V]\n",
+    "action_pitch = par.action_pitch\n",
+    "action_yaw = par.action_yaw\n",
+    "action_thrust = par.action_thrust\n",
+    "\n",
+    "action_roll = np.array([action_roll,0,0,0])\n",
+    "action_pitch = np.array([0,action_pitch,0,0])\n",
+    "action_yaw = np.array([0,0,action_yaw,0])\n",
+    "action_thrust = np.array([0,0,0,action_thrust])\n",
+    "actions = np.vstack((action_roll, action_pitch, action_yaw, action_thrust, -action_roll, -action_pitch, -action_yaw, -action_thrust))\n",
+    "k = np.zeros(4)\n",
+    "dic_k = {}\n",
+    "\n",
+    "\n",
+    "for j in range(8):\n",
+    "    for i in range(len(list(itertools.combinations(actions, j+1)))):\n",
+    "        k = np.vstack((k,sum(list(itertools.combinations(actions, j+1))[i])))\n",
+    "\n",
+    "k = np.unique(k,axis=0)\n",
+    "\n",
+    "for q in range(len(k)):\n",
+    "    dic_k[q] = k[q]\n",
+    "\n",
+    "dic_k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[(array([1, 0, 0, 0]),\n",
+       "  array([0, 1, 0, 0]),\n",
+       "  array([0, 0, 1, 0]),\n",
+       "  array([0, 0, 0, 1]),\n",
+       "  array([-1,  0,  0,  0]),\n",
+       "  array([ 0, -1,  0,  0]),\n",
+       "  array([ 0,  0, -1,  0]),\n",
+       "  array([ 0,  0,  0, -1]))]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 131
+    }
+   ],
+   "source": [
+    "list(itertools.combinations(actions, 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 154
+    }
+   ],
+   "source": [
+    "u = np.array([0.0,0.0,0.0,14])\n",
+    "u.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "o = np.array([[1,2,3],\n",
+    "              [4,5,6]])\n",
+    "np.reshape(o,-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[u_0, u_10, u_20, u_30]]\n[[u_1, u_11, u_21, u_31]]\n[[u_2, u_12, u_22, u_32]]\n[[u_3, u_13, u_23, u_33]]\n[[u_4, u_14, u_24, u_34]]\n[[u_5, u_15, u_25, u_35]]\n[[u_6, u_16, u_26, u_36]]\n[[u_7, u_17, u_27, u_37]]\n[[u_8, u_18, u_28, u_38]]\n[[u_9, u_19, u_29, u_39]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "u_vect = ca.SX.sym('u', 10,4)\n",
+    "\n",
+    "# u_vect\n",
+    "for i in ca.vertsplit(u_vect,1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Object `ca.sx.sym.nz` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ca.sx.sym.nz?"
    ]
   },
   {
