New reward method(vel_unit dot).

--- a/python/reference_nb/scratch_paper.ipynb
+++ b/python/reference_nb/scratch_paper.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -868,6 +868,29 @@
    ],
    "source": [
     "ca.sx.sym.nz?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.7320508075688772"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "a2 = np.array([2,3,4])\n",
+    "\n",
+    "np.linalg.norm(a2 - a)"
    ]
   },
   {
