--- a/python/reference_nb/quadrotor_sim.ipynb
+++ b/python/reference_nb/quadrotor_sim.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,10 +734,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NotImplementedError",
+     "evalue": "MIMO implementation not available",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-e4204fb069f3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mtf_vel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_sys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0mtf_vel_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_vel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0msys_vel_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontrol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtf2ss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontrol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf_vel_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDELTA_T\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0msys_vel_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;31m# u_ctrl = ca.SX.sym('u',4)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/pyt/lib/python3.8/site-packages/control/dtime.py\u001b[0m in \u001b[0;36mc2d\u001b[0;34m(sysc, Ts, method)\u001b[0m\n\u001b[1;32m    112\u001b[0m     '''\n\u001b[1;32m    113\u001b[0m     \u001b[0;31m#  Call the sample_system() function to do the work\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 114\u001b[0;31m     \u001b[0msysd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msample_system\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msysc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m     \u001b[0;31m# TODO: is this check needed?  If sysc is  StateSpace, sysd is too?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/pyt/lib/python3.8/site-packages/control/dtime.py\u001b[0m in \u001b[0;36msample_system\u001b[0;34m(sysc, Ts, method, alpha)\u001b[0m\n\u001b[1;32m     88\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"First argument must be continuous time system\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0msysc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/pyt/lib/python3.8/site-packages/control/xferfcn.py\u001b[0m in \u001b[0;36msample\u001b[0;34m(self, Ts, method, alpha)\u001b[0m\n\u001b[1;32m    983\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"System must be continuous time system\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    984\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0missiso\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 985\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"MIMO implementation not available\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    986\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmethod\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"matched\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    987\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0m_c2d_matched\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: MIMO implementation not available"
+     ]
+    }
+   ],
+   "source": [
+    "lin_state_func = linearize()\n",
+    "\n",
+    "x = np.zeros(12)\n",
+    "x[9:12] = np.array([1,1,5])\n",
+    "x[6:9] = np.array([0,0,0])\n",
+    "ref_point = np.array([0,0,7])\n",
+    "x_ref = np.zeros(12)\n",
+    "x_ref[9:12] = ref_point\n",
+    "p = par.p\n",
+    "hover_thrust = throttle(p[0]*p[8],p[3],p[2],p[4],p[5],p[6],p[7])\n",
+    "u0 = [0,0,0,hover_thrust*4]\n",
+    "\n",
+    "pos_err = x_ref[9:12] - x[9:12]\n",
+    "vel_ref = pos_err/np.linalg.norm(pos_err)\n",
+    "C_bn = euler_to_dcm(x[6:9])\n",
+    "vel_ref_b = ca.mtimes(C_bn, vel_ref)\n",
+    "vel_err = vel_ref_b - x[3:6]\n",
+    "\n",
+    "[A,B,C,D] = lin_state_func(x,u0,p)\n",
+    "sys = control.ss(A,B,C,D)\n",
+    "tf_sys = control.ss2tf(sys).minreal(tol=1e-6)\n",
+    "tf_vel = tf_sys[6:9,:]\n",
+    "tf_vel_x = tf_vel[0,:]\n",
+    "sys_vel_x = control.tf2ss(control.c2d(tf_vel_x, par.DELTA_T))\n",
+    "sys_vel_x\n",
+    "# u_ctrl = ca.SX.sym('u',4)\n",
+    "# u_ctrl = ca.mtimes(sys_vel_x.A, u_ctrl) + ca.mtimes(sys_vel_x.B, vel_err[0])\n",
+    "# f_control = ca.Function('f_control',[x,x_ref,u0,p],[u_ctrl],['x','x_ref','u0','p'],['u_ctrl'])"
+   ]
   }
  ],
  "metadata": {
