--- a/python/reference_nb/scratch_paper.ipynb
+++ b/python/reference_nb/scratch_paper.ipynb
@@ -168,14 +168,14 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "DM([0, 0, 0, 1])"
       ]
      },
+     "execution_count": 39,
      "metadata": {},
-     "execution_count": 39
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -383,12 +383,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "True"
+      "text/plain": [
+       "True"
+      ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -401,12 +403,22 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([[0.],\n        [1.],\n        [0.],\n        [0.],\n        [0.],\n        [1.],\n        [1.],\n        [1.],\n        [0.]])"
+      "text/plain": [
+       "tensor([[0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.]])"
+      ]
      },
+     "execution_count": 48,
      "metadata": {},
-     "execution_count": 48
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -429,12 +441,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "array([], dtype=float64)"
+      "text/plain": [
+       "array([], dtype=float64)"
+      ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "execution_count": 22
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -457,12 +471,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "43"
+      "text/plain": [
+       "43"
+      ]
      },
+     "execution_count": 45,
      "metadata": {},
-     "execution_count": 45
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -475,9 +491,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "ValueError",
      "evalue": "could not broadcast input array from shape (0) into shape (12)",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
@@ -496,12 +512,18 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[3, 7, 0, 4, 0, 6, 6, 9, 3, 3, 1, 5],\n       [8, 1, 9, 5, 6, 1, 3, 3, 4, 4, 0, 5],\n       [6, 2, 6, 8, 6, 5, 7, 8, 0, 1, 1, 4],\n       [5, 4, 7, 8, 0, 1, 1, 7, 2, 1, 8, 9],\n       [7, 3, 3, 5, 6, 2, 9, 4, 5, 2, 6, 3]])"
+      "text/plain": [
+       "array([[3, 7, 0, 4, 0, 6, 6, 9, 3, 3, 1, 5],\n",
+       "       [8, 1, 9, 5, 6, 1, 3, 3, 4, 4, 0, 5],\n",
+       "       [6, 2, 6, 8, 6, 5, 7, 8, 0, 1, 1, 4],\n",
+       "       [5, 4, 7, 8, 0, 1, 1, 7, 2, 1, 8, 9],\n",
+       "       [7, 3, 3, 5, 6, 2, 9, 4, 5, 2, 6, 3]])"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -514,12 +536,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "3.5"
+      "text/plain": [
+       "3.5"
+      ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -544,9 +568,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "ValueError",
      "evalue": "could not broadcast input array from shape (32,100,4) into shape (32,100,12)",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
@@ -567,14 +591,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([  3,  32, 100,  12])"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -602,14 +626,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([1, 2, 3])"
       ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "execution_count": 24
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -623,14 +647,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "4"
       ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "execution_count": 26
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -645,7 +669,6 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{0: array([-0.001, -0.001, -0.001, -0.01 ]),\n",
@@ -731,8 +754,9 @@
        " 80: array([0.001, 0.001, 0.001, 0.01 ])}"
       ]
      },
+     "execution_count": 168,
      "metadata": {},
-     "execution_count": 168
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -768,7 +792,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[(array([1, 0, 0, 0]),\n",
@@ -781,8 +804,9 @@
        "  array([ 0,  0,  0, -1]))]"
       ]
      },
+     "execution_count": 131,
      "metadata": {},
-     "execution_count": 131
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -795,14 +819,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "4"
       ]
      },
+     "execution_count": 154,
      "metadata": {},
-     "execution_count": 154
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -816,14 +840,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -838,10 +862,19 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[u_0, u_10, u_20, u_30]]\n[[u_1, u_11, u_21, u_31]]\n[[u_2, u_12, u_22, u_32]]\n[[u_3, u_13, u_23, u_33]]\n[[u_4, u_14, u_24, u_34]]\n[[u_5, u_15, u_25, u_35]]\n[[u_6, u_16, u_26, u_36]]\n[[u_7, u_17, u_27, u_37]]\n[[u_8, u_18, u_28, u_38]]\n[[u_9, u_19, u_29, u_39]]\n"
+      "[[u_0, u_10, u_20, u_30]]\n",
+      "[[u_1, u_11, u_21, u_31]]\n",
+      "[[u_2, u_12, u_22, u_32]]\n",
+      "[[u_3, u_13, u_23, u_33]]\n",
+      "[[u_4, u_14, u_24, u_34]]\n",
+      "[[u_5, u_15, u_25, u_35]]\n",
+      "[[u_6, u_16, u_26, u_36]]\n",
+      "[[u_7, u_17, u_27, u_37]]\n",
+      "[[u_8, u_18, u_28, u_38]]\n",
+      "[[u_9, u_19, u_29, u_39]]\n"
      ]
     }
    ],
@@ -859,8 +892,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Object `ca.sx.sym.nz` not found.\n"
      ]
@@ -876,14 +909,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1.7320508075688772"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -899,9 +932,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "TypeError",
      "evalue": "type numpy.ndarray doesn't define __round__ method",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
@@ -915,6 +948,29 @@
     "b = np.zeros([2,3])\n",
     "b[0] = a.T\n",
     "round(b,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DM(4)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[2]])\n",
+    "b = 2\n",
+    "\n",
+    "ca.dot(a,b)"
    ]
   },
   {
@@ -945,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
